# invoice-data-extractor

./: .gitignore  README.md  extracted_invoice_data.xlsx  extracted_invoice_data_20250718_161031.xlsx  main.py  pyproject.toml  requirements.txt  streamlit_app.py
app/: streamlit_app.py
src/invoice_data_extractor/: __init__.py  cli.py  export.py  extractor.py  storage.py  validation.py
tests/: test_extract_invoice_data.py
