[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-data-extractor"
version = "0.1.0"
description = "Extract invoice fields from image files with OCR and export them to Excel."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.12,<5",
    "openpyxl>=3.1,<4",
    "pandas>=2.3,<3",
    "pytesseract>=0.3.13,<0.4",
    "streamlit>=1.45,<2",
]

[project.scripts]
invoice-extract = "invoice_data_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
